@@ -34,7 +34,7 @@ $_lang['languages_desc'] = 'Here you can manage your available Languages.';
 $_lang['last_modified'] = 'Last Modified On';
 $_lang['lexicon'] = 'Lexicon';
 $_lang['lexicon_export'] = 'Export Topic';
-$_lang['lexicon_export_desc'] = 'Here you can select a Lexicon Topic to export to a file. It will be exported to the core/export/lexicon directory in its appropriate language and namespace folder.';
+$_lang['lexicon_export_desc'] = 'Here you can select a Lexicon Topic to export to a file.';
 $_lang['lexicon_topics'] = 'Lexicon Topics';
 $_lang['lexicon_topics_desc'] = 'Here you can manage your Lexicon Topics.';
 $_lang['lexicon_import'] = 'Import Topic';
